--- a/references.bib
+++ b/references.bib
@@ -158,7 +158,8 @@
 @article{hubery04,
   title={The composition algebra of an affine quiver},
   author={Hubery, Andrew},
-  journal={arXiv preprint math/0403206},
+  journal={arXiv preprint\\
+  math/0403206},
   year={2004}
 }
 
@@ -306,7 +307,8 @@
 }
 
 @article{crawleyboevey17,
-  title={On quiver Grassmannians and orbit closures for representation-finite algebras},
+  title={On quiver Grassmannians and orbit closures for\\
+  representation-finite algebras},
   author={Crawley-Boevey, W. and Sauter, J.},
   journal={Mathematische Zeitschrift},
   volume={285},
