The beer didn't seem to damage anything

--- a/preamble.sty
+++ b/preamble.sty
@@ -169,7 +169,7 @@
 \newcommand{\co}[1]{\operatorname{co}(#1)}
 
 % weight of the characteristic matrix
-\newcommand{\weight}{\operatorname{wt}}
+\newcommand{\weight}[1]{\operatorname{wt}(#1)}
 
 % orbits in double flag variety:
 \newcommand{\orbit}[1]{\mathcal{O}_{#1}}
