don't think I did anything.

--- a/report.tex
+++ b/report.tex
@@ -2006,7 +2006,7 @@ e_A = \omega_1\cdots\omega_m 1_\lambda
 \end{equation*}
 for some
 \begin{equation*}
-\omega_1\ldots,\omega_m\in\{E_1,\ldots,E_n\}\cup\{F_1,\ldots,F_n\},
+\omega_1,\ldots,\omega_m\in\{E_1,\ldots,E_n\}\cup\{F_1,\ldots,F_n\},
 \end{equation*}
 where $\lambda=\co{A}$.
 \end{lemma}
